ADD: Theor-found: skeleton

--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -11,6 +11,272 @@
 * Versions [1/1]                                                   :noexport:
 1. [X] Problem statement: deadline - <2021-10-28 qui>
 
+* Notes                                                           :Important:
+  :PROPERTIES:
+  :ID:       ea2d2209-c1f3-4de8-9acb-90bca065b262
+  :END:
+** Requirements
+   - buildroot
+   - c/c++ (both)
+   - Device drivers
+   - Linux/Raspberry Pi
+   - CPS: Cyber-physical systems
+   - Makefiles
+** Problem statement
+   DEADLINE: <2021-10-28 qui>
+   Think about the project and deliver a document about it.
+** Research
+*** Topics [0/3]
+ - [ ] Cyber-physical systems characteristics: _identify the required features
+   for the system_
+ - [ ] Analyze previous projects to understand what is feasible in terms of
+   Real-time systems using device drivers with Raspberry Pi: _gives an overall
+   idea of what can be achieved_
+ - [ ] Situate the project requirements, the project constraints
+*** Selection
+- [[file:readme.org][Marketing digital Outdoor]]
+** Report
+*** Outline [1/7]
+1. [X] Introduction
+   1. Motivation and context
+   2. Problem statement
+   3. Market research
+   4. Goals
+   5. Project planning
+   6. Report outline
+2. [ ] Analysis
+   1. Background and state of the art
+   2. Requirements and constraints
+   3. System overview
+   4. System architecture
+      1. HW architecture
+      2. SW architecture
+   5. Subsystems decomposition
+      1. Events
+      2. Use cases
+      3. State machine diagram
+      4. Sequence diagram
+   6. Budget
+   7. Theoretical foundations
+3. [ ] Design
+   1. HW specification
+      1. Block diagram with COTS components, if possible
+      2. List of constraints of functions to be implemented in HW or SW
+   2. HW interfaces definition
+      1. I/O ports
+      2. HW registers
+      3. Memory addresses for shared or I/O by memory mapping
+      4. HW interrupts
+   3. SW specification
+      1. Identify main subsystems
+      2. System tasks
+   4. SW interfaces definition
+      - Define the APIs in detail:
+	- header files with:
+	  - functions prototypes
+	  - data structure declarations
+	  - class declarations
+   5. Start-up/shutdown process specification
+   6. Error Handling specification
+4. [ ] Implementation
+5. [ ] Testing
+6. [ ] Verification/Validation
+7. [ ] Conclusions
+** Marketing Digital Outdoor                                      :Important:
+*** Topics
+1. Motivation and context
+   - Scenting marketing is a great approach to draw people into stores.
+   - Scent sense is the fastest way to the brain, thus, providing an exceptional
+     opportunity for marketing.
+   - Combining that with additional stimuli, like eye and earing, can
+     significantly boost the marketing outcome.
+     #+begin_quote
+   - Knowing your target audience it is critical for the success of stores.
+   - Marketing can be used to collect, analyse, investigate and decide the best
+     politics for addressing a specific target audience, understanding the
+     its behavioral patterns. 
+   - To understand behavioral patterns _machine-learning models_ can be used.
+     #+end_quote
+2. Concept
+   - Offer a marketing digital outdoor for brands to advertise and captivate customers
+   - Brands can buy advertisement space and time by sending the following data:
+	| Digital Outdoor location | Fragrance name | Start Time | Stop Time | Audio Message | Video |
+     - The brands can send the data to our company database through our
+       website/application.
+     - The data will then be sent to the marketing digital outdoor using a wireless
+       communication technology.
+   - The advertisement data will be exposed into a display, an audio message
+     transmitted, as well as the indicate fragrance between the designated time
+     interval.
+   - COVID pandemics changed the perspectives about user interaction with the
+     surroundings, with non touch interfaces being preferred. Thus, a non touch
+     user interface is a must have.
+   - When a user approaches the marketing digital outdoor, a proximity sensor will detect
+     it and activate the _user interaction mode_.
+     - When activating this mode the camera is started mirroring the user into
+       the display and providing additional options.
+     - In this mode, the user can:
+       1) apply image filters related to the brand
+       2) take pics
+       3) create GIFs
+       4) share them
+     - This mode requires:
+       - Facial detection for image filter application
+       - Hand gesture recognition for navigating the menus and activating
+         options
+       - A virtual keyboard (non-touch) will be provided for user input, by
+         mapping the screen to the keys and waiting for a designated time before
+         accepting it.
+       - A set of hand gestures to be used in user interaction
+     - Several sharing platforms shall be provided namely social media and
+       email.
+       - Tracking the nr of shares provides feedback for the brands in respect
+         of the brand awareness.
+       - Additionally, brands can also monitor this by checking their social
+         media accounts.
+ 
+*** Technologies [0/11]
+1. [ ] Computer vision for facial and gesture recognition (OpenCV)
+2. [ ] Database for marketing digital outdoor management (SQL)
+3. [ ] Website/Application for brands communication to our database
+4. [ ] Wireless communication technology for remote communication with digital outdoors
+5. [ ] Image filter application
+6. [ ] Infrared detection
+7. [ ] Camera recording
+8. [ ] Audio output
+9. [ ] Nebulizer technology for scenting
+10. [ ] Screen mapping to keys for virtual keyboard
+11. [ ] Social media and e-mail sharing APIs
+
+*** ✔ DONE Problem statement
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2021-10-23 sáb 11:55]
+    :END:
+
+*** ✔ DONE Market research [3/3]
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2021-11-19 sex 23:30]
+    :END:
+1) [X] Scenting marketing: trends, market value
+2) [X] Digital Outdoors: quantity, market value
+3) [X] Combined marketing: are they digital outdoor + scenting?
+
+*** Project planning
+**** Gantt diagram [0/8]
+1) [ ] Planning
+   - [ ] Kick-off meeting
+   - [ ] Problem Statement
+   - [ ] Market Research
+   - [ ] Project Planning
+2) [ ] Analysis
+   - [ ] System overview
+   - [ ] Requirements and constraints
+   - [ ] System architecture
+   - [ ] System Analysis
+   - [ ] Estimated budgets
+   - [ ] Subsystem decomposition
+     - [ ] Events
+     - [ ] Use-cases
+     - [ ] Dynamic operation: state-machine diagram
+     - [ ] Flow of events: sequence diagram
+3) [ ] Design
+   - [ ] Analysis review
+   - [ ] HW specification
+   - [ ] Component shipping
+   - [ ] Software specification
+     - [ ] Remote client
+     - [ ] Remote server + database
+     - [ ] Local system
+4) [ ] Implementation
+   - [ ] HW testing
+   - [ ] SW implementation
+     - [ ] Remote client
+     - [ ] Remote server + database
+     - [ ] Local system
+   - [ ] HW implementation
+     - [ ] Breadboard
+     - [ ] PCB design
+   - [ ] System configuration
+5) [ ] Testing
+   1) [ ] SW unit testing
+   2) [ ] SW integrated testing
+   3) [ ] HW unit testing
+   4) [ ] HW integrated testing
+   5) [ ] Functional testing
+6) [ ] Verification/Validation
+   1) [ ] Verification
+   2) [ ] Validation
+7) [ ] Report Writing
+   1) [ ] Problem statement
+   2) [ ] Analysis
+   3) [ ] Design
+   4) [ ] Implementation
+   5) [ ] Final
+8) [ ] Documentation
+   1) [ ] Problem statement
+   2) [ ] Analysis
+   3) [ ] Design
+   4) [ ] Implementation
+   5) [ ] Testing
+**** Required HW [3/7]
+Research link: https://www.one-tab.com/page/TZxmVAXJTO6nVyNO593ARA
+
+- [X] Raspberry Pi 4: 52 EUR
+- [X] HDMI screen: 50 EUR - https://shorturl.at/oyAOR 
+- [ ] Relay/Transistor + Ultrassonic actuator for nebulizing fragrance
+- [ ] Audio output
+- [ ] Power supply
+- [ ] Mechanical structure
+- [X] Camera: 14 EUR - https://shorturl.at/gnpCU
+*** Analysis
+**** System architecture
+*Example*
+#+BEGIN_QUOTE
+BRAND -> DB
+RC -> RS: q brand Nestle
+RS -> DB: query brand Nestle
+DS -> RS: Nestle milka.mp4 milka.wav Chocolate
+RS -> RC: Nestle milka.mp4 milka.wav Chocolate
+
+COMPANY -> MDO-L
+Staff member login
+    RC -> RS: q mdo systems
+    RS -> DB: query mdo-systems
+    DB -> RS: std::<vector> mdo_systems
+    for(i = 0; i < mdo_systems.size(); i++ )
+        RS -> RC: mdo_systems[i]
+RC -> RC: Select MDO-L machine
+Send command
+    RC -> RS: mdo <nr> <command> (mdo 1 get mode)
+    RS -> RS: parse command
+    RS -> RS: get mdo_nr IP (query mdo-systems 1 IP)
+    RS -> MDO-L: connect IP:port
+    MDO-L -> RS: connected
+    RS -> MDO-L: get mode
+    MDO-L -> RS: normal mode (example)
+    RS -> RC: normal
+#+END_QUOTE
+*** Theoretical foundations [3/16]  
+1) [X] *Project methodology: Waterfall model*
+2) [X] *Multitasking and Pthreads*
+3) [X] *Client-Server architecture & TCP/IP & OSI model*
+4) [ ] /Daemons/
+5) [ ] /Device drivers/
+6) [ ] *Nebulizer technology for scenting*
+7) [ ] *Gesture recognition algorithms using computer vision*
+8) [ ] *Face detection algorithms using computer vision*
+9) [ ] *RDBMS (Relational Database management system) (SQL)*
+10) [ ] /User detection technologies: IR, ultrasonic/
+11) [ ] /Camera recording and codecs/
+12) [ ] /Image filtering APIs/
+13) [ ] /GIFs generation/
+14) [ ] *Social media and e-mail sharing APIs*
+15) [ ] /UI framework: Qt/
+16) [ ] /File transfer protocols/
+
+Legend:
+- *Ze*
+- /Hugo/
 * Diagrams
 Diagrams can be drawn using [2/2]:
 - [X] draw.io
