--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -159,6 +159,10 @@
 \setcounter{table}{0}
 \setcounter{figure}{0}
 %%
+\include{./tex/Chap/3-Theor-Found/THEOR-FOUND}
+\setcounter{table}{0}
+\setcounter{figure}{0}
+%%
 %\include{./tex/Chap/3-Design/DESIGN}
 %\setcounter{table}{0}
 %\setcounter{figure}{0}
