ADD: Theor-Found: proj-method

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -295,5 +295,76 @@ author = {Fei Tao and Meng Zhang and A.Y.C. Nee},
 keywords = {Digital twin (DT), cyber-physical system (CPS), Internet of Things (IoT), connections, smart manufacturing},
 abstract = {Cyber–physical system (CPS) and digital twin (DT) share the same goal, that is, achieving seamless integration between the physical and cyber worlds. CPS provides an integrated and compatible framework with a comprehensive perspective, and DT can be considered as a focused application of it. The DT carries characteristics of CPS, such as cyber–physical mapping, closed-loop control, and three-level structure, while its elements (e.g., high-fidelity models, fused data, and on-demand services) can further enhance the cyber–physical integration based on CPS. In this chapter, according to relations between the two concepts, an implementation framework of DT-based CPS is proposed to efficiently couple the physical and cyber worlds. Further, the Internet of Things (IoT) is applied to the framework to realize the connections within and across the physical world and cyber world, thus keeping each element connected interactively with each other.}
 }
+%
+@book{bruegge2004object,
+  title     = {Object-Oriented Software Engineering Using UML, Patterns and Java-(Required)},
+  author    = {Bruegge, Bernd and Dutoit, Allen H},
+  volume    = {2004},
+  year      = {2004},
+  publisher = {Prentice Hall},
+  keywords  = {Object-Oriented Software Engineering, UML, Java}
+}
+%
+@article{sommerville1996software,
+  title={Software process models},
+  author={Sommerville, Ian},
+  journal={ACM computing surveys (CSUR)},
+  volume={28},
+  number={1},
+  pages={269--271},
+  year={1996},
+  publisher={ACM}
+}
+%
+@article{cusumano1995beyond,
+  title={Beyond the waterfall: Software development at Microsoft},
+  author={Cusumano, Michael A and Smith, Stanley A},
+  year={1995},
+  publisher={Sloan School of Management, Massachusetts Institute of Technology]}
+}
+% 6
+@book{carne2004professional,
+  title={A professional's guide to data communication in a TCP/IP world},
+  author={Carne, E Bryan},
+  year={2004},
+  publisher={Artech House}
+}
+% 7
+@article{wright1995tcp,
+  title={TCP/IP illustrated. Vol. 2: The implementation},
+  author={Wright, Gary R and Stevens, W Richard},
+  journal={tii},
+  year={1995}
+}
+% 8
+@book{kerrisk2010linux,
+  title={The Linux programming interface: a Linux and UNIX system programming handbook},
+  author={Kerrisk, Michael},
+  year={2010},
+  publisher={No Starch Press}
+}
+% 9
+@incollection{hanson2000client,
+  title={The client/server architecture},
+  author={Hanson, M David},
+  booktitle={Server Management},
+  pages={17--28},
+  year={2000},
+  publisher={Auerbach Publications}
+}
+% 10
+@misc{ibmCliServ,
+title={Client/Server Model},
+url={https://www.ibm.com/support/knowledgecenter/en/SSAL2T_8.1.0/com.ibm.cics.tx.doc/concepts/c_clnt_sevr_model.html}, journal={IBM Knowledge Center},
+publisher={IBM Knowledge Center},
+  note={accessed: 2020-07-02},
+}
+% 11
+@book{buttlar1996pthreads,
+  title={Pthreads programming: A POSIX standard for better multiprocessing},
+  author={BUTTLAR, DICK AUTOR and Nichols, Bradford and Buttlar, Dick and Farrell, Jacqueline and Farrell, Jackie},
+  year={1996},
+  publisher={" O'Reilly Media, Inc."}
+}
 % +++++++++++++++++++++++  END ==============================
 
