--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -257,6 +257,9 @@ Send command
     RS -> RC: normal
 #+END_QUOTE
 *** Theoretical foundations [3/16]  
+    :PROPERTIES:
+    :ATTACH_DIR: /home/zmpl/OneDrive - Universidade do Minho/Univ/MI_Electro/Sem7/SEC/2021-22/repo/Proj/sec/img/
+    :END:
 1) [X] *Project methodology: Waterfall model*
 2) [X] *Multitasking and Pthreads*
 3) [X] *Client-Server architecture & TCP/IP & OSI model*
@@ -277,6 +280,7 @@ Send command
 Legend:
 - *Ze*
 - /Hugo/
+
 * Diagrams
 Diagrams can be drawn using [2/2]:
 - [X] draw.io
