ADD: Theor-Found: Concurrency

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -153,4 +153,5 @@
 \newacronym{soc}{SoC}{System-on-a-Chip}
 \newacronym{ac}{AC}{Alternating Current}
 \newacronym{dc}{DC}{Direct Current}
+\newacronym{posix}{POSIX}{Portable Operating System Interface}
 % ========================== END ======================
