--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -359,5 +359,14 @@ publisher={IBM Knowledge Center},
   year={1996},
   publisher={" O'Reilly Media, Inc."}
 }
+%
+@inproceedings{yang2016wider,
+  title={Wider face: A face detection benchmark},
+  author={Yang, Shuo and Luo, Ping and Loy, Chen-Change and Tang, Xiaoou},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={5525--5533},
+  year={2016}
+}
+
 % +++++++++++++++++++++++  END ==============================
 
