UPDT: Theor-Found: Computer vision

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -367,6 +367,22 @@ publisher={IBM Knowledge Center},
   pages={5525--5533},
   year={2016}
 }
+%
+@misc{cv-frameworks-2020,
+title={Top 10 computer vision frameworks you need to know in 2020},
+url={https://roboticsbiz.com/top-10-computer-vision-frameworks-you-need-to-know-in-2020/},
+journal={Robotics Biz},
+publisher={Robotics Biz},
+  note={accessed: 2021-11-21},
+}
+%
+@book{kaehler2016learning,
+  title={Learning OpenCV 3: computer vision in C++ with the OpenCV library},
+  author={Kaehler, Adrian and Bradski, Gary},
+  year={2016},
+  publisher={" O'Reilly Media, Inc."}
+}
+
 
 % +++++++++++++++++++++++  END ==============================
 
