--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -154,4 +154,7 @@
 \newacronym{ac}{AC}{Alternating Current}
 \newacronym{dc}{DC}{Direct Current}
 \newacronym{posix}{POSIX}{Portable Operating System Interface}
+\newacronym{ocr}{OCR}{Optical Character Recognition}
+\newacronym{cnn}{CNN}{Convolutional Neural Network}
+\newacronym{hd}{HD}{High-Definition}
 % ========================== END ======================
