UPDT: Theor-Found: Face detection

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -382,7 +382,99 @@ publisher={Robotics Biz},
   year={2016},
   publisher={" O'Reilly Media, Inc."}
 }
+%
+@article{yang2002detecting,
+  title={Detecting faces in images: A survey},
+  author={Yang, Ming-Hsuan and Kriegman, David J and Ahuja, Narendra},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  volume={24},
+  number={1},
+  pages={34--58},
+  year={2002},
+  publisher={IEEE}
+}
+%
+@article{zhang2010survey,
+  title={A survey of recent advances in face detection},
+  author={Zhang, Cha and Zhang, Zhengyou},
+  year={2010}
+}
+%
+@article{viola2004robust,
+  title={Robust real-time face detection},
+  author={Viola, Paul and Jones, Michael J},
+  journal={International journal of computer vision},
+  volume={57},
+  number={2},
+  pages={137--154},
+  year={2004},
+  publisher={Springer}
+}
+%
+@inproceedings{li2013learning,
+  title={Learning surf cascade for fast and accurate object detection},
+  author={Li, Jianguo and Zhang, Yimin},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={3468--3475},
+  year={2013}
+}
+@inproceedings{dollar2009pedestrian,
+  title={Pedestrian detection: A benchmark},
+  author={Doll{\'a}r, Piotr and Wojek, Christian and Schiele, Bernt and Perona, Pietro},
+  booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={304--311},
+  year={2009},
+  organization={IEEE}
+}
+@inproceedings{yang2014aggregate,
+  title={Aggregate channel features for multi-view face detection},
+  author={Yang, Bin and Yan, Junjie and Lei, Zhen and Li, Stan Z},
+  booktitle={IEEE international joint conference on biometrics},
+  pages={1--8},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{li2015convolutional,
+  title={A convolutional neural network cascade for face detection},
+  author={Li, Haoxiang and Lin, Zhe and Shen, Xiaohui and Brandt, Jonathan and Hua, Gang},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={5325--5334},
+  year={2015}
+}
+@inproceedings{yang2015facial,
+  title={From facial parts responses to face detection: A deep learning approach},
+  author={Yang, Shuo and Luo, Ping and Loy, Chen-Change and Tang, Xiaoou},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={3676--3684},
+  year={2015}
+}
+@inproceedings{dalal2005histograms,
+  title={Histograms of oriented gradients for human detection},
+  author={Dalal, Navneet and Triggs, Bill},
+  booktitle={2005 IEEE computer society conference on computer vision and pattern recognition (CVPR'05)},
+  volume={1},
+  pages={886--893},
+  year={2005},
+  organization={Ieee}
+}
+@article{felzenszwalb2009object,
+  title={Object detection with discriminatively trained part-based models},
+  author={Felzenszwalb, Pedro F and Girshick, Ross B and McAllester, David and Ramanan, Deva},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={32},
+  number={9},
+  pages={1627--1645},
+  year={2009},
+  publisher={IEEE}
+}
 
+@misc{pyimage-face-bestpractices,
+title={Face detection tips, suggestions and best-practices},
+url={https://www.pyimagesearch.com/2021/04/26/face-detection-tips-suggestions-and-best-practices/},
+journal={PyImageSearch},
+publisher={PyImageSearch},
+  note={accessed: 2021-11-22},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
