--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -157,4 +157,10 @@
 \newacronym{ocr}{OCR}{Optical Character Recognition}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{hd}{HD}{High-Definition}
+\newacronym{dpm}{DPM}{Deformable part models}
+\newacronym{svm}{SVM}{Support Vector Machine}
+\newacronym{acf}{ACF}{Aggregated channel feature}
+\newacronym{hog}{HOG}{Histogram of Oriented Gradients}
+
+
 % ========================== END ======================
