ADD: Code: face detection examples in Python + openCV

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -132,6 +132,7 @@
 \newacronym{pca}{PCA}{Programmable Counter Array}
 \newacronym{mcu}{MCU}{Micro Controller Unit}
 \newacronym{cpu}{CPU}{Central Processing Unit}
+\newacronym{gpu}{GPU}{Graphics Processing Unit}
 \newacronym{isr}{ISR}{Interrupt Service Routine}
 \newacronym{fifo}{FIFO}{First-In, First-Out}
 \newacronym{dooh}{DOOH}{Digital Out-Of-Home}
