--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -467,12 +467,36 @@ publisher={Robotics Biz},
   year={2009},
   publisher={IEEE}
 }
-
+%
 @misc{pyimage-face-bestpractices,
 title={Face detection tips, suggestions and best-practices},
 url={https://www.pyimagesearch.com/2021/04/26/face-detection-tips-suggestions-and-best-practices/},
 journal={PyImageSearch},
 publisher={PyImageSearch},
+  note={accessed: 2021-11-22},
+}
+@inproceedings{viola2001rapid,
+  title={Rapid object detection using a boosted cascade of simple features},
+  author={Viola, Paul and Jones, Michael},
+  booktitle={Proceedings of the 2001 IEEE computer society conference on computer vision and pattern recognition. CVPR 2001},
+  volume={1},
+  pages={I--I},
+  year={2001},
+  organization={Ieee}
+}
+%
+@misc{opencv-haar-classif,
+title={Cascade classifier},
+url={https://docs.opencv.org/3.4/db/d28/tutorial_cascade_classifier.html},
+journal={OpenCV docs},
+publisher={OpenCV docs},
+  note={accessed: 2021-11-22},
+}
+@misc{haar-classif-explained,
+title={Haar Cascades, Explained},
+url={https://docs.opencv.org/3.4/db/d28/tutorial_cascade_classifier.html},
+journal={Medium},
+publisher={Aditya Mittal},
   note={accessed: 2021-11-22},
 }
 
